<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">HwrkIt</string>
    <string name="title_section1">Statistics</string>
    <string name="title_section2">Classes</string>
    <string name="title_section3">Homework</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Logout</string>
    <string name="app_login">HwrkIt</string>
    <string name="title_activity_login_activity">Sign Up</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_fname_hint">First Name</string>
    <string name="login_lname_hint">Last Name</string>
    <string name="login_login">Log In</string>
    <string name="logo">Logo</string>
    <string name="login_signup">Sign Up</string>
    <string name="register_back">Back</string>
    <string name="register_register">Register</string>
    <string name="login_repassword_hint">Re-enter password</string>
    <string name="placeholder">Filler Text</string>
    <string name="plus">+</string>

    <!-- Label for button to confirm chosen date or time [CHAR LIMIT=30] -->
    <string name="done_label">Done</string>
    <!--
         Content description for the hour selector in the time picker, which displays
         selectable hours of the day along the inside edge of a circle, as in an analog clock.
         [CHAR LIMIT=50]
    -->
    <string name="hour_picker_description">Hours circular slider</string>
    <!--
         Content description for the minute selector in the time picker, which displays
         selectable five-minute intervals along the inside edge of a circle, as in an analog clock.
         [CHAR LIMIT=50]
    -->
    <string name="minute_picker_description">Minutes circular slider</string>
    <!-- Accessibility announcement for hour circular picker [CHAR LIMIT=NONE] -->
    <string name="select_hours">Select hours</string>
    <!-- Accessibility announcement for minute circular picker [CHAR LIMIT=NONE] -->
    <string name="select_minutes">Select minutes</string>

    <!--
        Content description for the month and day selector in the date picker, which displays
        a selectable grid of days laid out by month.
        [CHAR LIMIT=50]
     -->
    <string name="day_picker_description">Month grid of days</string>
    <!--
        Content description for the year selector in the date picker, which displays
        a scrolling, vertical list of years.
        [CHAR LIMIT=50]
     -->
    <string name="year_picker_description">Year list</string>
    <!-- Accessibility announcement for the day picker [CHAR LIMIT=NONE] -->
    <string name="select_day">Select month and day</string>
    <!-- Accessibility announcement for the year picker [CHAR LIMIT=NONE] -->
    <string name="select_year">Select year</string>
    <!-- Accessibility description for the item that is currently selected. -->
    <string name="item_is_selected"><xliff:g id="item" example="2013">%1$s</xliff:g> selected</string>
    <!-- Accessibility announcement when a number that had been typed in is deleted [CHAR_LIMIT=NONE] -->
    <string name="deleted_key"><xliff:g id="key" example="4">%1$s</xliff:g> deleted</string>

    <!-- DO NOT TRANSLATE -->
    <string name="time_placeholder">--</string>
    <!-- DO NOT TRANSLATE -->
    <string name="time_separator">:</string>

    <!-- DO NOT TRANSLATE -->
    <string name="radial_numbers_typeface">sans-serif</string>
    <!-- DO NOT TRANSLATE -->
    <string name="sans_serif">sans-serif</string>

    <!-- DO NOT TRANSLATE -->
    <string name="day_of_week_label_typeface">sans-serif</string>
</resources>