<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jabs.hwrkit.LoginActivity" >
        
        
    <LinearLayout
        android:id="@+id/email_register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/rEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/login_email_hint"
            android:maxLines="1"
            android:singleLine="true" />
        
        <EditText
            android:id="@+id/rFName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/login_fname_hint"
            android:maxLines="1"
            android:singleLine="true" />
        
        <EditText
            android:id="@+id/rLName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/login_lname_hint"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/rPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />
	    
        <EditText
            android:id="@+id/rsPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/login_repassword_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />
        
        <LinearLayout
           	android:id="@+id/register_errors_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
            android:background="@drawable/custom_login_error_layout"
            android:layout_marginTop="15dp"
            android:alpha="0.0" >
            <TextView
	            android:id="@+id/register_errors"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:minLines="2"
	            android:maxLines="2"
	            android:gravity="center"
	            android:padding="6dp"
	            android:textColor="#FFFFFF" />
        </LinearLayout>

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_register"
            android:background="@drawable/custom_login_button"
            android:textStyle="bold" />
        <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent">
	
	        <TextView
	            android:id="@+id/tvBack"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentBottom="true"
	            android:layout_centerHorizontal="true"
	            android:text="@string/register_back"
	            android:textColor="@drawable/custom_login_text"
	            android:clickable="true" />
    	</RelativeLayout>
    </LinearLayout>
</LinearLayout>